--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 # PostgreSQL.
 default: &default
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
