--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14-alpine
+        image: postgis/postgis:14-3.4 
         env:
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
