--- a/test/fixtures/admin_users.yml
+++ b/test/fixtures/admin_users.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
-  password_digest: MyString
+  email: admin_one@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
+  role: 1
 
 two:
-  email: MyString
-  password_digest: MyString
+  email: admin_two@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
+  role: 1
