--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
-  password_digest: MyString
+  email: user_one@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
 
 two:
-  email: MyString
-  password_digest: MyString
+  email: user_two@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
