交通需要マップのルート表示機能

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
     
     "POSTGRES_HOST": "db",
     "POSTGRES_USER": "vscode",
-    "POSTGRES_PASSWORD": "password"
+    "POSTGRES_PASSWORD": "password",
+    "GOOGLE_MAP_API_KEY": "AIzaSyAuarhNbt7Fjg7h_Z-DTY4ofkIHDhNg2dg"
   },
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   "forwardPorts": [
