テーブル構成を修正（アンケート関連を追加）

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
     "vscode": {
       "extensions": [
         "github.copilot",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "tomoyukim.vscode-mermaid-editor"
       ]
     }
   },
