テストエラー修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,10 @@ development:
 test:
   <<: *default
   database: transportation_test
+  username: postgres
+  password:
+  host: localhost
+
 
 production:
   <<: *default
