--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,7 @@ jobs:
         env:
           RAILS_ENV: test 
           PGHOST: localhost
+          POSTGRES_HOST: localhost 
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
         run: |
