--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
 test:
   <<: *default
   database: transportation_test
-  username: postgres
-  password:
+  username: rails
+  password: password
   host: localhost
 
 
