--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
 test:
   <<: *default
   database: transportation_test
-  username: rails
-  password: password
+  username:  <%= ENV["POSTGRES_USER"] || "rails" %>
+  password: <%= ENV["POSTGRES_PASSWORD"] || "password" %>
   host: localhost
 
 
