--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # これらの値はdocker-compose.ymlなどで環境変数として設定します
-  host: <%= ENV.fetch("POSTGRES_HOST", "localhost") %>
-  username: <%= ENV.fetch("POSTGRES_USER", "rails") %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD", "password") %>
+  # これらの値はdocker-compose.ymlやCIの環境変数として設定します
+  host: <%= ENV.fetch("PGHOST", "localhost") %>
+  username: <%= ENV.fetch("PGUSER", "rails") %>
+  password: <%= ENV.fetch("PGPASSWORD", "password") %>
 
 development:
   <<: *default
@@ -16,11 +16,7 @@ development:
 
 test:
   <<: *default
-  database: transportation_test
-  username:  <%= ENV["POSTGRES_USER"] || "rails" %>
-  password: <%= ENV["POSTGRES_PASSWORD"] || "password" %>
-  host: <%= ENV["POSTGRES_HOST"] || "localhost" %>
-
+  database: <%= ENV.fetch("PGDATABASE", "transportation_test") %>
 
 production:
   <<: *default
