テストエラー再々々々々々修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,8 @@ development:
 test:
   <<: *default
   database: <%= ENV.fetch("PGDATABASE", "transportation_test") %>
+  username: rails
+  password: password
 
 production:
   <<: *default
