--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,7 @@ jobs:
         env:
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: transportation_test
-
+          POSTGRES_DB: rails_test
         ports:
           - 5432:5432
         options: >-
@@ -96,12 +95,11 @@ jobs:
         env:
           RAILS_ENV: test 
           PGHOST: localhost
-          PGUSER: rails
-          PGPASSWORD: password
-          PGDATABASE: transportation_test
+          POSTGRES_USER: rails
+          POSTGRES_PASSWORD: password
           # REDIS_URL: redis://localhost:6379/0
         run: |
-          bin/rails db:prepare
+          bin/rails db:test:prepare
           bin/rails test
 
       - name: Keep screenshots from failed system tests
