--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,8 @@ jobs:
         env:
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: rails_test
+          # database.yml の test ブロックとデータベース名を一致させます
+          POSTGRES_DB: transportation_test
         ports:
           - 5432:5432
         options: >-
@@ -95,11 +96,11 @@ jobs:
         env:
           RAILS_ENV: test 
           PGHOST: localhost
+          # database.yml が読み込む環境変数を設定します
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
-          # REDIS_URL: redis://localhost:6379/0
         run: |
-          bin/rails db:test:prepare
+          bin/rails db:prepare
           bin/rails test
 
       - name: Keep screenshots from failed system tests
