--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,10 +86,10 @@ jobs:
           bundler-cache: true
 
       - name: Create root role in PostgreSQL
-        # PGPASSWORD環境変数でpostgresユーザーのパスワードを指定します
         env:
           PGPASSWORD: password
-        run: psql -h localhost -U postgres -c "CREATE USER root WITH SUPERUSER PASSWORD 'password';"
+        # 接続ユーザーを -U postgres から -U rails に変更します
+        run: psql -h localhost -U rails -c "CREATE USER root WITH SUPERUSER PASSWORD 'password';"
 
       - name: Run tests
         env:
