--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: user_one@example.com
+  user_name: "山田 太郎"
   password_digest: <%= BCrypt::Password.create('password') %>
 
 two:
-  email: user_two@example.com
+  user_name: "鈴木 花子"
   password_digest: <%= BCrypt::Password.create('password') %>
