--- a/test/fixtures/admin_users.yml
+++ b/test/fixtures/admin_users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: admin_one@example.com
+  user_name: admin_one
   password_digest: <%= BCrypt::Password.create('password') %>
-  role: 1
+  role: 'superadmin'
 
 two:
-  email: admin_two@example.com
+  user_name: admin_two
   password_digest: <%= BCrypt::Password.create('password') %>
-  role: 1
+  role: 'editor'
