--- a/config/database.yml
+++ b/config/database.yml
@@ -16,15 +16,8 @@ development:
   username: <%= ENV.fetch("POSTGRES_USER", "vscode") %>
 
 test:
-  # CI/CD環境での接続エラーを確実に解消するため、値を直接指定します。
-  # 継承や環境変数参照をなくし、設定の曖昧さを排除します。
-  adapter: postgis
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  <<: *default
   database: transportation_test
-  host: localhost
-  username: rails
-  password: password
 
 production:
   <<: *default
