--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
       "extensions": [
         "github.copilot",
         "github.copilot-chat",
-        "tomoyukim.vscode-mermaid-editor"
+        "tomoyukim.vscode-mermaid-editor",
+        "ms-vscode.live-server"
       ]
     }
   },
