--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,4 +3,4 @@ ARG RUBY_VERSION=3.4.5
 FROM ghcr.io/rails/devcontainer/images/ruby:$RUBY_VERSION
 
 # postgresql-client と libpq-dev をインストールするコマンドを追加
-RUN apt-get update && apt-get install -y postgresql-client libpq-dev
+RUN sudo apt-get update && sudo apt-get install -y postgresql-client libpq-dev
